--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAG6VB47WrzoaVn9F_QZ5xiKmPA1JyEL9U"></script>
+
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
@@ -26,6 +29,8 @@
   <meta name="apple-mobile-web-app-title" content="trabalho_mobile3_starter">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
+
+  
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/assets/splash.png"/>
 
@@ -34,5 +39,6 @@
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+
 </body>
 </html>
